--- a/css/style.css
+++ b/css/style.css
@@ -622,7 +622,6 @@ gap: 24px;
     align-items: center;
     border: 1px solid rgba(0, 0, 0, 0.1);
     padding: 0;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
 
@@ -638,8 +637,12 @@ gap: 24px;
 
 .modal-btn:hover, .modal-btn:focus{
     background-color: #404bbf;
-    border: none;
-    fill: #ffffff 
+    border: none; 
+    fill: #ffffff
+}
+
+.modal-btn-icon:hover, .modal-btn-icon:focus{
+    fill: #ffffff
 }
 
 
@@ -659,7 +662,7 @@ gap: 24px;
 
 
 .form-wrapper{
-    margin-bottom: 8px;
+    margin-bottom: 16px;
 }
 
 .form-wrapper-comment{
@@ -716,7 +719,7 @@ gap: 24px;
 }
 
 
-.form-input:checked + .form-label {
+.form-input:focus + .form-icon {
     fill: #4D5AE5;
 }
 
