--- a/css/style.css
+++ b/css/style.css
@@ -622,6 +622,7 @@ gap: 24px;
     align-items: center;
     border: 1px solid rgba(0, 0, 0, 0.1);
     padding: 0;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -635,15 +636,12 @@ gap: 24px;
 }
 
 
-.modal-btn:hover, .modal-btn:focus{
+.modal-btn:hover, .modal-btn-icon{
     background-color: #404bbf;
     border: none; 
     fill: #ffffff
 }
 
-.modal-btn-icon:hover, .modal-btn-icon:focus{
-    fill: #ffffff
-}
 
 
 .modal-caption{
@@ -662,7 +660,7 @@ gap: 24px;
 
 
 .form-wrapper{
-    margin-bottom: 16px;
+    margin-bottom: 8px;
 }
 
 .form-wrapper-comment{
@@ -714,9 +712,6 @@ gap: 24px;
 
 
 
-.form-icon:hover, .form-icon:focus{
-    fill: #ffffff
-}
 
 
 .form-input:focus + .form-icon {
@@ -790,9 +785,10 @@ gap: 24px;
 
 
 
-.checkbox:checked + .form-agreement-checkbox{
+.checkbox:checked + .form-label .form-agreement-checkbox{
     background-color: #404bbf; 
     border-color:  #404BBF;
+    fill: #f4f4fd;
 }
 
 .form-agreement-icon{
@@ -835,6 +831,3 @@ transform: scale(1);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-btn:hover .form-btn:focus {
-    fill: #ffffff
-}
